# gemini-sheets-bot

./: README.md  env.example  pyproject.toml  run_demo.py
app/: main.py
app/core/: config.py  logging.py
app/llm/: gemini.py
app/models/: request.py  response.py
app/people/: __init__.py  find.py
app/routes/: chat.py
app/sheets/: __init__.py  client.py
